# CMakeVSCodeExample

./: CMakeLists.txt  main.cpp  runVSVars.bat
src/: CMakeLists.txt
src/HelloLib/: HelloWorld.cpp  HelloWorld.h
src/SubDirectoryFunction/: makeDirectory.cpp  makeDirectory.h
